feat: 아이콘 메뉴

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -49,3 +49,10 @@
   flex: 1;
   text-align: center;
 }
+
+.categoryContainer {
+  display: flex;
+  justify-content: center;
+  gap: 34px;
+  padding: 40px 10px;
+}
