--- a/src/components/layouts/header/styles.module.css
+++ b/src/components/layouts/header/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -8,6 +8,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: background-color 0.5s ease;
+}
+
+.containerDark {
+  background-color: #000000e2;
 }
 
 .logo {
