--- a/src/app/workspaces/components/WorkspaceModal.module.css
+++ b/src/app/workspaces/components/WorkspaceModal.module.css
@@ -18,6 +18,8 @@
   width: 400px;
   max-width: 90%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  position: relative;
+  top: -50px;
 }
 
 .modal h2 {
