--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -69,3 +69,9 @@
 .navItem:hover {
   color: #0070f3;
 }
+
+.novelContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
