--- a/src/components/main-page/MainNovelItems.module.css
+++ b/src/components/main-page/MainNovelItems.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 0 60px;
+  width: 80%;
 }
 
 .title {
@@ -13,9 +14,9 @@
 }
 
 .list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 12px;
-  justify-content: space-between;
 }
 
 .item {
@@ -23,7 +24,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .thumbnail {
@@ -43,7 +44,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   width: 100%;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .author {
